# Finance_tracker

./: README.md  pyproject.toml  ruff.toml
.github/workflows/: ruff.yml
src/split_mate/: __init__.py  _version.py  database.py  graphs.py  gui.py  launch_app.py
