[project]
name = "SplitMate"
authors = [
    { name = "Jaime Gonzalez", email = "jim.gomez.dnn@gmail.com" },
]
description = "Finanze tracker app"
dependencies = [
    "PyQt6",
    "bokeh>=3",
]
requires-python = ">=3.9"
license = { text = "MIT license" }
dynamic = ["readme", "version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "http://github/Jtachan/Finance_tracker.git"
#Documentation = "https://readthedocs.org"

# you can add CLI tools which should be installed when installing the package
# [project.scripts]
# cli-command = "pkg_name.module:function"

[project.optional-dependencies]
dev = ["ruff", "pytest", "mkdocs-material"]

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "split_mate._version.__version__" }
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.packages.find]
where = ["src"]
